--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
