--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "gsap": "^3.12.5",
+    "@gsap/react": "^2.1.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
     "locomotive-scroll": "^4.1.4",
