--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
-    "gsap": "^3.12.5",
-    "@gsap/react": "^2.1.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
+    "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.14.1"
+    "react-intersection-observer": "^9.14.1",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
